--- a/views/header.ejs
+++ b/views/header.ejs
@@ -32,7 +32,7 @@
             <p>@candleLight</p>
         </div>
 
-
+<!--
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
@@ -41,9 +41,13 @@
             crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script> -->
+
 
         <script src="/js/vue.js"></script>
+        <script src="/js/popper.js"></script>
+        <script src="/js/jquery.js"></script>
+        <script src="/js/bootstrap.js"></script>
 
 
     </body>
